--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,6 +1,9 @@
 <head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <link rel="stylesheet" href="style.css"></link>
-  <title>sold</title>
+  <title>Audio player in React</title>
 </head>
 <body>
+  <div id='root'></div>
 </body>
